# comfyui-dreambait-nodes

./: .gitignore  README.md  __init__.py  frame-blend-time-remapping.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: aspect_pad_for_outpainting.json
fonts/: MPlantin Italic.ttf:Zone.Identifier  mplantin.ttf:Zone.Identifier
img_utils/: img_nodes.py
js/: audioWidget.html  audioWidget.js  dict_to_outputs.js  dynamic_string_concatenate.js  folder_opener.js  markdownInteractive.js  markdownRender.js  markdown_renderer.js  shot_history.js
src/: __init__.py  node_mappings.py  nodes_mappings.py
src/nodes/: BoolPlusPlus.py  DRMBT_MultiMinMax.py  DRMBT_execution_time.py  ImageFrameBlend.py  ListItemExtract.py  ListItemSelector.py  LoadAudioPlus.py  MusicGen.py  NormalizeAudio.py  NumberPlusPlus.py  NumberRemap.py  SwitchDuo.py  TextLineSelect.py  TextLinesToList.py  TextPlusPlus.py  __init__.py  aspect_pad_for_outpainting.py  borked-with-audio.py  compare_image_similarity.py  draw_icons.py  draw_text_drmbt.py  drmbt_image_resize.py  drmbt_load_media-preAudio2.py  drmbt_load_media.py  drmbt_nodes.py  folder_opener.py  markdown_interactive.py  markdown_render.py  markdown_renderer.py  minicpm_v_node.py  model_context_selector.py  plot_parameters.py  qwen2_audio_instruct.py  rounded_rectangle.py  shot_history.py  sort_visual_path.py  string_item_menu.old.py  string_item_menu.py  string_list_item_index.py  string_list_menu_item.py  (+1 more)
src/web/: executionTime.js
web/js/: dynamic_dictionary.js
