[project]
name = "comfyui-dreambait-nodes"
description = "ComfyUI nodes collection featuring ImageResizeFaceAware, FrameBlend, MiniCPM-V vision-language model, enhanced primitives (Text++, Number++), Load Media, and other package forks and QoL utilities"
version = "1.2.0"
license = {file = "LICENSE"}
dependencies = [
    "opencv-python",
    "piexif",
    "py7zr",
    "lpips",
    "tsp_solver2",
    "einops",
    "tqdm",
    "numpy>=1.21.0",
    "torch>=2.0.0",
    "transformers",
    "huggingface-hub",
    "moviepy"
]

[project.urls]
Repository = "https://github.com/drmbt/comfyui-dreambait-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "drmbt"
DisplayName = "comfyui-dreambait-nodes"
Icon = ""
