[project]
name = "comfyui-dreambait-nodes"
description = "ComfyUI nodes collection featuring ImageResizeFaceAware, FrameBlend, MiniCPM-V vision-language model, enhanced primitives (Text++, Number++), Load Media, and other package forks and QoL utilities"
version = "1.3.0"
license = {file = "LICENSE"}
dependencies = [
    "opencv-python",
    "piexif",
    "py7zr",
    "lpips",
    "tsp_solver",
    "einops",
    "tqdm",
    "numpy>=1.22.0",
    "torch>=2.0.0",
    "transformers>=4.45.0",
    "huggingface-hub>=0.19.0",
    "moviepy",
    "pyloudnorm>=0.1.0",
    "sentencepiece>=0.1.99",
    "pillow>=10.1.0",
    "bitsandbytes>=0.43.1",
    "accelerate>=0.30.1",
    "torchaudio>=2.0.0",
    "librosa",
    "pyphen>=0.14.0",
    "pywin32>=306; platform_system == 'Windows'"
]

[project.urls]
Repository = "https://github.com/drmbt/comfyui-dreambait-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "drmbt"
DisplayName = "comfyui-dreambait-nodes"
Icon = ""
